Endret litt på stilsetting, og lagt til scrolling på karosell på hjemmeskjerm, og en alert for feedback

--- a/Energidrikkfabrikken/Views/Contact/Index.cshtml
+++ b/Energidrikkfabrikken/Views/Contact/Index.cshtml
@@ -19,7 +19,7 @@
         </a>
         
         <h2 class="contact--info--h2">Vår kontaktinformasjon</h2>
-        <div class="contact--info--contact-wrapper">
+        <div class="contact--info--contact-wrapper box-shadow">
             <div class="contact--info--contact--object">
                 <span class="contact--info--contact--object--title">Telefon:</span>
                 <span>+47 42 35 24 25</span>
@@ -40,7 +40,7 @@
         <p class="contact--info--p" id="contactInfoP">Dersom du ønsker å avtale møte med oss, ta kontakt via kontaktskjema, mail, eller telefon. Vi svarer innen 2 virkedager.</p>
     </div>
     <form method="post">
-        <div class="contact--form-wrapper">
+        <div class="contact--form-wrapper box-shadow">
             <div class="contact--form--grid-wrapper">
                 <div class="contact--form--grid--object firstname-input">
                     <label asp-for="FirstName" class="contact--form--grid--label"></label>
@@ -79,7 +79,7 @@
                 </div>
             </div>
             <p class="contact--form--p">Skjemaet blir sendt som en mail videre til oss i Energidrikkfabrikken. Vi svarer innen 2 virkedager.</p>
-            <button class="contact--form--submit-btn" type="submit">
+            <button class="contact--form--submit-btn box-shadow2" type="submit">
                 Send
                 <img src="svg/right-icon-white.svg" alt="send kontaktskjema ikon"/>
             </button>
