--- a/Energidrikkfabrikken/wwwroot/css/home.css
+++ b/Energidrikkfabrikken/wwwroot/css/home.css
@@ -16,6 +16,13 @@
     animation: 0.5s ease-in-out fadeInFromBottom;
     display: flex;
     gap: 2%;
+    overflow: scroll;
+    scroll-behavior: smooth;
+}
+
+.carousel::-webkit-scrollbar {
+    width: 0;
+    height: 0;
 }
 
 .carousel img {
